# backend

./: .pylintrc  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/: app.py  models.py  settings.toml  views.py
backend/blueprints/cliente/: cliente.py
backend/blueprints/entregador/: entregador.py
backend/blueprints/exemplo/: exemplo.py
backend/ext/: auth.py  configuration.py  mail.py
migrations/versions/: 03ee8006abe9_atualizaçao_6.py  0aabb639b657_mudança.py  0e196fa2c7a0_corrigindo_o_banco.py  104b61104e07_fixing_the_migration.py  146b53312922_imagem.py  1b3539da7ac9_mudança_coluna_valor.py  2014ac3e229c_atualizaçao_4.py  22a1b3d9d937_tabela_cliente.py  27fe565bdfde_primeira_tabela.py  330a47212977_tabela_cardápio.py  3d085d04ee33_atualização_dos_dados.py  433da0a99065_nome_do_restaurante.py  55cd26f65bef_adicionada_a_tabela_mensagem.py  570809155ba1_conversas.py  5d978d234b7d_tabela_cliente.py  5fea82f61035_add_coluna_endereco.py  6217955ba83c_cliente_pediu_nome.py  71c7aef9b005_atualizacao_2.py  8010377d21c2_boolean_string.py  88205260b8c2_acento_add.py  99c31f107b79_atualizaçao_3.py  9b7ff5dfdb50_tabela_pedidofeito.py  9d35942ce566_tabela_cliente_criada.py  ae1d9ac1e89e_nome_restaurante.py  b0b81e027502_atualizaçao_8.py  b851eba2ea95_cardapio.py  d31510fa0db3_cardapio_categoria.py  da34ce736b11_imagem_cliente.py  dbc464232a60_tabela_entregador.py  e477784e5a98_coluna_nome_completo.py  e6b4f8aad656_tabela_entregador.py  ea7901a05c3d_usuario.py  f462872bff73_tabela_restaurante.py  ffd0ff6100b6_cliente_pediu.py
(+36 files in other folders)
