[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Projeto backend do semestre 2021.2"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
dynaconf = "^3.1.7"
toml = "^0.10.2"
flaskstarter = "^0.5.3"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
Flask-Login = "^0.5.0"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
